сделана секция hero

--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
     <!-- Основной контент -->
     <main>
         <!-- Герой -->
+        <div class="overlay">
             <section class="hero">
                 <div class="container">
                     <h1 class="hero-titel">Эффективные решения для вашего бизнеса</h1>
                     <button type="button" class="button">Заказать услугу</button>
                 </div>
             </section>
+        </div>
         <!-- Преимущества -->
         <section class="advantage-section">
             <div class="container">
