--- a/index.html
+++ b/index.html
@@ -27,8 +27,16 @@
                     </ul>
             </nav>
             <ul class="contacts-list list">
-                <li class="item"><a href="mailto:info@devstudio.com" class="contacts link">info@devstudio.com</a></li>
-                <li class="item"><a href="tel:+380961111111" class="contacts link">+38 096 111 11 11</a></li>
+                <li class="item"><a href="mailto:info@devstudio.com" class="contacts link">
+                    <svg class="icon-envelope" width="16px" height="12px">
+                        <use href="images/symbol-defs.svg#envelope"></use>
+                    </svg>
+                    info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="contacts link">
+                    <svg class="icon-smartphone" width="10px" height="16px">
+                        <use href="images/symbol-defs.svg#smartphone"></use>
+                    </svg>
+                    +38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -50,18 +58,38 @@
                 <h2 class="visually-hidden">Наши преимущества</h2>
                 <ul class="advantage list">
                     <li class="advantage-list">
+                        <div class="icons-container">
+                            <svg class="icon-img" width="70px" height="70px">
+                                <use href="images/symbol-defs.svg#antena"></use>
+                            </svg>
+                        </div>
                         <h3 class="titel">Внимание к деталям</h3>
                         <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="advantage-list">
+                        <div class="icons-container">
+                            <svg class="icon-img" width="70px" height="70px">
+                                <use href="images/symbol-defs.svg#clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="titel">Пунктуальность</h3>
                         <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="advantage-list">
+                        <div class="icons-container">
+                            <svg class="icon-img" width="70px" height="70px">
+                                <use href="images/symbol-defs.svg#diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="titel">Планирование</h3>
                         <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="advantage-list">
+                        <div class="icons-container">
+                            <svg class="icon-img" width="70px" height="70px">
+                                <use href="images/symbol-defs.svg#astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="titel">Современные технологии</h3>
                         <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -89,7 +117,44 @@
                         <div class="employee-information">
                             <h3 class="titel">Игорь Демьяненко</h3>
                             <p class="text">Product Designer</p>
-                        </div>
+                            <ul class="test">
+                                <li class="test2">
+                                    <a href="#" class="social-link">
+                                        <div style="margin: 12px auto; width: 20px; height: 20px">
+                                            <svg class="instagram-test" width="20" height="20">
+                                                <use href="images/symbol-defs.svg#instagram"></use>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="test2">
+                                    <a href="" class="social-link">
+                                        <div style="margin: 12px auto; width: 20px; height: 20px">
+                                            <svg class="instagram-test" width="20px" height="20px">
+                                                <use href="images/symbol-defs.svg#twitter"></use>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="test2">
+                                    <a href="" class="social-link">
+                                        <div style="margin: 12px auto; width: 20px; height: 20px">
+                                            <svg class="instagram-test" width="20px" height="20px">
+                                                <use href="images/symbol-defs.svg#facebook"></use>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="test2">
+                                    <a href="" class="social-link">
+                                        <div style="margin: 12px auto; width: 20px; height: 20px">
+                                            <svg class="instagram-test" width="20px" height="20px">
+                                                <use href="images/symbol-defs.svg#linkedin"></use>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
                     </li>
                     <li class="team-list">
                         <img class="photo" src="./images/Olga.jpg" alt="Ольга Репина" width="270">
@@ -113,6 +178,11 @@
                         </div>
                     </li>
                 </ul>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <h2 class="section-titel">Постоянные клиенты</h2>
             </div>
         </section>
     </main>
