--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
                 <a href="#" class="logo">
                 Web<span class="logo-part">Studio</span>
                 </a>
-                    <ul class="site-nav list">
-                        <li class="item"><a href="#" class="link current">Студия</a></li>
-                        <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-                        <li class="item"><a href="" class="link">Контакты</a></li>
-                    </ul>
+                <ul class="site-nav list">
+                    <li class="item"><a href="#" class="link current">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="" class="link">Контакты</a></li>
+                </ul>
             </nav>
             <ul class="contacts-list list">
-                <li class="item"><a href="mailto:info@devstudio.com" class="contacts link">
-                    <svg class="icon-envelope" width="16px" height="12px">
-                        <use href="images/symbol-defs.svg#envelope"></use>
-                    </svg>
-                    info@devstudio.com</a></li>
+                <li class="item">
+                    <a href="mailto:info@devstudio.com" class="contacts link">
+                        <svg width="16px" height="12px">
+                            <use href="images/symbol-defs.svg#envelope"></use>
+                        </svg>
+                        info@devstudio.com</a>
+                </li>
                 <li class="item"><a href="tel:+380961111111" class="contacts link">
-                    <svg class="icon-smartphone" width="10px" height="16px">
+                    <svg width="10px" height="16px">
                         <use href="images/symbol-defs.svg#smartphone"></use>
                     </svg>
                     +38 096 111 11 11</a></li>
@@ -117,38 +119,38 @@
                         <div class="employee-information">
                             <h3 class="titel">Игорь Демьяненко</h3>
                             <p class="text">Product Designer</p>
-                            <ul class="test">
-                                <li class="test2">
-                                    <a href="#" class="social-link">
-                                        <div style="margin: 12px auto; width: 20px; height: 20px">
-                                            <svg class="instagram-test" width="20" height="20">
+                            <ul class="social-link-list">
+                                <li class="content">
+                                    <a href="" class="social-link">
+                                        <div class="svg-contain">
+                                            <svg width="20" height="20">
                                                 <use href="images/symbol-defs.svg#instagram"></use>
                                             </svg>
                                         </div>
                                     </a>
                                 </li>
-                                <li class="test2">
+                                <li class="content">
                                     <a href="" class="social-link">
-                                        <div style="margin: 12px auto; width: 20px; height: 20px">
-                                            <svg class="instagram-test" width="20px" height="20px">
+                                        <div class="svg-contain">
+                                            <svg width="20px" height="20px">
                                                 <use href="images/symbol-defs.svg#twitter"></use>
                                             </svg>
                                         </div>
                                     </a>
                                 </li>
-                                <li class="test2">
+                                <li class="content">
                                     <a href="" class="social-link">
-                                        <div style="margin: 12px auto; width: 20px; height: 20px">
-                                            <svg class="instagram-test" width="20px" height="20px">
+                                        <div class="svg-contain">
+                                            <svg width="20px" height="20px">
                                                 <use href="images/symbol-defs.svg#facebook"></use>
                                             </svg>
                                         </div>
                                     </a>
                                 </li>
-                                <li class="test2">
+                                <li class="content">
                                     <a href="" class="social-link">
-                                        <div style="margin: 12px auto; width: 20px; height: 20px">
-                                            <svg class="instagram-test" width="20px" height="20px">
+                                        <div class="svg-contain">
+                                            <svg width="20px" height="20px">
                                                 <use href="images/symbol-defs.svg#linkedin"></use>
                                             </svg>
                                         </div>
@@ -161,6 +163,44 @@
                         <div class="employee-information">
                             <h3 class="titel">Ольга Репина</h3>
                             <p class="text">Frontend Developer</p>
+                            <ul class="social-link-list">
+                                <li class="content">
+                                    <a href="" class="social-link">
+                                        <div class="svg-contain">
+                                            <svg width="20" height="20">
+                                                <use href="images/symbol-defs.svg#instagram"></use>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="content">
+                                    <a href="" class="social-link">
+                                        <div class="svg-contain">
+                                            <svg width="20px" height="20px">
+                                                <use href="images/symbol-defs.svg#twitter"></use>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="content">
+                                    <a href="" class="social-link">
+                                        <div class="svg-contain">
+                                            <svg width="20px" height="20px">
+                                                <use href="images/symbol-defs.svg#facebook"></use>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="content">
+                                    <a href="" class="social-link">
+                                        <div class="svg-contain">
+                                            <svg width="20px" height="20px">
+                                                <use href="images/symbol-defs.svg#linkedin"></use>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list">
@@ -168,6 +208,44 @@
                         <div class="employee-information">
                             <h3 class="titel">Николай Тарасов</h3>
                             <p class="text">Marketing</p>
+                            <ul class="social-link-list">
+                                <li class="content">
+                                    <a href="" class="social-link">
+                                        <div class="svg-contain">
+                                            <svg width="20" height="20">
+                                                <use href="images/symbol-defs.svg#instagram"></use>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="content">
+                                    <a href="" class="social-link">
+                                        <div class="svg-contain">
+                                            <svg width="20px" height="20px">
+                                                <use href="images/symbol-defs.svg#twitter"></use>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="content">
+                                    <a href="" class="social-link">
+                                        <div class="svg-contain">
+                                            <svg width="20px" height="20px">
+                                                <use href="images/symbol-defs.svg#facebook"></use>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="content">
+                                    <a href="" class="social-link">
+                                        <div class="svg-contain">
+                                            <svg width="20px" height="20px">
+                                                <use href="images/symbol-defs.svg#linkedin"></use>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list">
@@ -175,31 +253,170 @@
                         <div class="employee-information">
                             <h3 class="titel">Михаил Ермаков</h3>
                             <p class="text">UI Designer</p>
+                            <ul class="social-link-list">
+                                <li class="content">
+                                    <a href="" class="social-link">
+                                        <div class="svg-contain">
+                                            <svg width="20" height="20">
+                                                <use href="images/symbol-defs.svg#instagram"></use>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="content">
+                                    <a href="" class="social-link">
+                                        <div class="svg-contain">
+                                            <svg width="20px" height="20px">
+                                                <use href="images/symbol-defs.svg#twitter"></use>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="content">
+                                    <a href="" class="social-link">
+                                        <div class="svg-contain">
+                                            <svg width="20px" height="20px">
+                                                <use href="images/symbol-defs.svg#facebook"></use>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="content">
+                                    <a href="" class="social-link">
+                                        <div class="svg-contain">
+                                            <svg width="20px" height="20px">
+                                                <use href="images/symbol-defs.svg#linkedin"></use>
+                                            </svg>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
-        <section>
+        <!-- Постоянные клиенты -->
+        <section class="regular-customers-section">
             <div class="container">
                 <h2 class="section-titel">Постоянные клиенты</h2>
+                <ul class="regular-list">
+                    <li class="item">
+                        <a class="regular-link" href="">
+                            <div class="svg-contain">
+                                <svg width="41" height="46.7">
+                                    <use href="images/symbol-defs.svg#group1"></use>
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="regular-link" href="">
+                            <div class="svg-contain">
+                                <svg width="40" height="52">
+                                    <use href="images/symbol-defs.svg#group2"></use>
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="regular-link" href="">
+                            <div class="svg-contain">
+                                <svg width="43.46" height="41.18">
+                                    <use href="images/symbol-defs.svg#group3"></use>
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="regular-link" href="">
+                            <div class="svg-contain">
+                                <svg width="84.44" height="40.62">
+                                    <use href="./images/symbol-defs.svg#group4"></use>
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="regular-link" href="">
+                            <div class="svg-contain">
+                                <svg width="62.54" height="45.43">
+                                    <use href="./images/symbol-defs.svg#group5"></use>
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a class="regular-link" href="">
+                            <div class="svg-contain">
+                                <svg width="93.79" height="43.93">
+                                    <use href="./images/symbol-defs.svg#group6"></use>
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
 
     <!-- Футер -->
     <footer class="footer-section">
-        <div class="container">
-                <a href="#" class="logo-footer">
-                    Web<span class="logopart-footer">Studio</span>
-                </a>
-                <address class="address">
-                    <p class="text">г. Киев, пр-т Леси Украинки, 26</p> 
-                    <a href="mailto:info@devstudio.com" class="footer-contacts link">info@devstudio.com</a> 
-                    <a href="tel:+380961111111" class="footer-contacts link">+38 096 111 11 11</a>
-                </address>
+        <div class="footer-container">
+            <div class="test">
+                <div class="footer-contain">
+                    <a href="#" class="logo-footer">
+                        Web<span class="logopart-footer">Studio</span>
+                    </a>
+                    <address class="address">
+                        <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
+                        <a href="mailto:info@devstudio.com" class="footer-contacts link">info@devstudio.com</a>
+                        <a href="tel:+380961111111" class="footer-contacts link">+38 096 111 11 11</a>
+                    </address>
+                </div>
+                <div class="join-container">
+                    <p class="text">присоединяйтесь</p>
+                    <ul class="social-link-footer">
+                        <li class="item">
+                            <a href="" class="social-link">
+                                <div class="svg-contain">
+                                    <svg width="20" height="20">
+                                        <use href="images/symbol-defs.svg#instagram"></use>
+                                    </svg>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="item">
+                            <a href="" class="social-link">
+                                <div class="svg-contain">
+                                    <svg width="20px" height="20px">
+                                        <use href="images/symbol-defs.svg#twitter"></use>
+                                    </svg>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="item">
+                            <a href="" class="social-link">
+                                <div class="svg-contain">
+                                    <svg width="20px" height="20px">
+                                        <use href="images/symbol-defs.svg#facebook"></use>
+                                    </svg>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="item">
+                            <a href="" class="social-link">
+                                <div class="svg-contain">
+                                    <svg width="20px" height="20px">
+                                        <use href="images/symbol-defs.svg#linkedin"></use>
+                                    </svg>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
-    
 </body>
 </html>
