--- a/index.html
+++ b/index.html
@@ -29,16 +29,20 @@
             <ul class="contacts-list list">
                 <li class="item">
                     <a href="mailto:info@devstudio.com" class="contacts link">
-                        <svg width="16px" height="12px">
+                        <svg class="svg-icon" width="16px" height="12px">
                             <use href="images/symbol-defs.svg#envelope"></use>
                         </svg>
-                        info@devstudio.com</a>
+                        info@devstudio.com
+                    </a>
                 </li>
-                <li class="item"><a href="tel:+380961111111" class="contacts link">
-                    <svg width="10px" height="16px">
-                        <use href="images/symbol-defs.svg#smartphone"></use>
-                    </svg>
-                    +38 096 111 11 11</a></li>
+                <li class="item">
+                    <a href="tel:+380961111111" class="contacts link">
+                        <svg class="svg-icon" width="10px" height="16px">
+                            <use href="images/symbol-defs.svg#smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11
+                    </a>
+                </li>
             </ul>
         </div>
     </header>
@@ -303,56 +307,44 @@
                 <ul class="regular-list">
                     <li class="item">
                         <a class="regular-link" href="">
-                            <div class="svg-contain">
-                                <svg width="41" height="46.7">
-                                    <use href="images/symbol-defs.svg#group1"></use>
-                                </svg>
-                            </div>
+                            <svg class="svg-contain" width="106" height="60">
+                                <use href="images/symbol-defs.svg#Logo1"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a class="regular-link" href="">
-                            <div class="svg-contain">
-                                <svg width="40" height="52">
-                                    <use href="images/symbol-defs.svg#group2"></use>
-                                </svg>
-                            </div>
+                            <svg class="svg-contain" width="106" height="60">
+                                <use href="images/symbol-defs.svg#Logo2"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a class="regular-link" href="">
-                            <div class="svg-contain">
-                                <svg width="43.46" height="41.18">
-                                    <use href="images/symbol-defs.svg#group3"></use>
-                                </svg>
-                            </div>
+                            <svg class="svg-contain" width="106" height="60">
+                                <use href="images/symbol-defs.svg#Logo3"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a class="regular-link" href="">
-                            <div class="svg-contain">
-                                <svg width="84.44" height="40.62">
-                                    <use href="./images/symbol-defs.svg#group4"></use>
-                                </svg>
-                            </div>
+                            <svg class="svg-contain" width="106" height="60">
+                                <use href="images/symbol-defs.svg#Logo4"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a class="regular-link" href="">
-                            <div class="svg-contain">
-                                <svg width="62.54" height="45.43">
-                                    <use href="./images/symbol-defs.svg#group5"></use>
-                                </svg>
-                            </div>
+                            <svg class="svg-contain" width="106" height="60">
+                                <use href="images/symbol-defs.svg#Logo5"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a class="regular-link" href="">
-                            <div class="svg-contain">
-                                <svg width="93.79" height="43.93">
-                                    <use href="./images/symbol-defs.svg#group6"></use>
-                                </svg>
-                            </div>
+                            <svg class="svg-contain" width="106" height="60">
+                                <use href="images/symbol-defs.svg#Logo6"></use>
+                            </svg>
                         </a>
                     </li>
                 </ul>
